# executable-inspector

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
cmake/: DetectArchitecture.cmake  DetectCompiler.cmake
src/app/: CMakeLists.txt  application.cc  application.h  console.h  glfw_window.cc  glfw_window.h  library_loader_linux.cc  library_loader_linux.h  library_loader_win32.cc  library_loader_win32.h  main.cc  precompiled.cc  precompiled.h  process_result.cc  process_result.h  processor_manager.cc  processor_manager.h
src/app/gui/: gui.cc  gui.h
src/app/library_loader/: library_loader_linux.cc  library_loader_linux.h  library_loader_win32.cc  library_loader_win32.h
src/app/processing/: processor_manager.cc
src/gui/: CMakeLists.txt  precompiled.h  widgets.cc
src/processors/PE/: CMakeLists.txt  PE_processor.cc  PE_processor.h  collected_data.h  dos_header.cc  precompiled.h
src/processors/PE/win32/: minwindef.h  ntimage.h
src/processors/elf/: CMakeLists.txt  elf_processor.cc  elf_processor.h  precompiled.h
src/processors/utils/: CMakeLists.txt  precompiled.h  processed_file_reader.cc  utils.cc
src/public/: aliased_value.h  assert.h  bytebuffer.h  console.h  custom_format.h  imgui_config.h  platform.h  pretty_value.h  processor_interface.h  vector.h
src/public/gui/: widgets.h
src/public/interface/: file_processor_interface.h  library_loader_interface.h  processor_manager_interface.h
src/public/processors/: processed_file_reader.h  utils.h
